--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # Compiled class file
+
 *.class
 
 # Log file
@@ -22,60 +23,8 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 scaleout/.idea/workspace.xml
-.idea/libraries/Maven__org_rauschig_jarchivelib_1_0_0.xml
-.idea/libraries/Maven__cglib_cglib_nodep_3_2_4.xml
-.idea/libraries/Maven__com_beust_jcommander_1_72.xml
-.idea/libraries/Maven__com_codeborne_phantomjsdriver_1_4_0.xml
-.idea/libraries/Maven__com_google_code_findbugs_jsr305_1_3_9.xml
-.idea/libraries/Maven__com_google_code_gson_gson_2_8_0.xml
-.idea/libraries/Maven__com_google_errorprone_error_prone_annotations_2_0_18.xml
-.idea/libraries/Maven__com_google_guava_guava_23_0.xml
-.idea/libraries/Maven__com_google_j2objc_j2objc_annotations_1_1.xml
-.idea/libraries/Maven__commons_codec_commons_codec_1_10.xml
-.idea/libraries/Maven__commons_io_commons_io_2_5.xml
-.idea/libraries/Maven__commons_logging_commons_logging_1_2.xml
-.idea/libraries/Maven__io_github_bonigarcia_webdrivermanager_3_8_1.xml
-.idea/libraries/Maven__javax_servlet_javax_servlet_api_3_1_0.xml
-.idea/libraries/Maven__junit_junit_4_12.xml
-.idea/libraries/Maven__net_java_dev_jna_jna_4_1_0.xml
-.idea/libraries/Maven__net_java_dev_jna_jna_platform_4_1_0.xml
-.idea/libraries/Maven__net_sourceforge_cssparser_cssparser_0_9_23.xml
-.idea/libraries/Maven__net_sourceforge_htmlunit_htmlunit_2_27.xml
-.idea/libraries/Maven__net_sourceforge_htmlunit_htmlunit_core_js_2_27.xml
-.idea/libraries/Maven__net_sourceforge_htmlunit_neko_htmlunit_2_27.xml
-.idea/libraries/Maven__org_apache_commons_commons_compress_1_18.xml
-.idea/libraries/Maven__org_apache_commons_commons_exec_1_3.xml
-.idea/libraries/Maven__org_apache_commons_commons_lang3_3_5.xml
-.idea/libraries/Maven__org_apache_extras_beanshell_bsh_2_0b6.xml
-.idea/libraries/Maven__org_apache_httpcomponents_httpclient_4_5_3.xml
-.idea/libraries/Maven__org_apache_httpcomponents_httpcore_4_4_6.xml
-.idea/libraries/Maven__org_apache_httpcomponents_httpmime_4_5_3.xml
-.idea/libraries/Maven__org_codehaus_mojo_animal_sniffer_annotations_1_14.xml
-.idea/libraries/Maven__org_eclipse_jetty_jetty_client_9_4_5_v20170502.xml
-.idea/libraries/Maven__org_eclipse_jetty_jetty_http_9_4_5_v20170502.xml
-.idea/libraries/Maven__org_eclipse_jetty_jetty_io_9_4_5_v20170502.xml
-.idea/libraries/Maven__org_eclipse_jetty_jetty_util_9_4_5_v20170502.xml
-.idea/libraries/Maven__org_eclipse_jetty_websocket_websocket_api_9_4_5_v20170502.xml
-.idea/libraries/Maven__org_eclipse_jetty_websocket_websocket_client_9_4_5_v20170502.xml
-.idea/libraries/Maven__org_eclipse_jetty_websocket_websocket_common_9_4_5_v20170502.xml
-.idea/libraries/Maven__org_hamcrest_hamcrest_core_1_3.xml
-.idea/libraries/Maven__org_jsoup_jsoup_1_11_3.xml
-.idea/libraries/Maven__org_seleniumhq_selenium_htmlunit_driver_2_27.xml
-.idea/libraries/Maven__org_seleniumhq_selenium_selenium_api_3_5_3.xml
-.idea/libraries/Maven__org_seleniumhq_selenium_selenium_chrome_driver_3_5_3.xml
-.idea/libraries/Maven__org_seleniumhq_selenium_selenium_edge_driver_3_5_3.xml
-.idea/libraries/Maven__org_seleniumhq_selenium_selenium_firefox_driver_3_5_3.xml
-.idea/libraries/Maven__org_seleniumhq_selenium_selenium_ie_driver_3_5_3.xml
-.idea/libraries/Maven__org_seleniumhq_selenium_selenium_java_3_5_3.xml
-.idea/libraries/Maven__org_seleniumhq_selenium_selenium_opera_driver_3_5_3.xml
-.idea/libraries/Maven__org_seleniumhq_selenium_selenium_remote_driver_3_5_3.xml
-.idea/libraries/Maven__org_seleniumhq_selenium_selenium_safari_driver_3_5_3.xml
-.idea/libraries/Maven__org_seleniumhq_selenium_selenium_support_3_5_3.xml
-.idea/libraries/Maven__org_slf4j_slf4j_api_1_7_25.xml
-.idea/libraries/Maven__org_testng_testng_6_14_2.xml
-.idea/libraries/Maven__org_w3c_css_sac_1_3.xml
-.idea/libraries/Maven__xalan_serializer_2_7_2.xml
-.idea/libraries/Maven__xalan_xalan_2_7_2.xml
-.idea/libraries/Maven__xerces_xercesImpl_2_11_0.xml
-.idea/libraries/Maven__xml_apis_xml_apis_1_4_01.xml
-.idea/libraries/Maven__cglib_cglib_nodep_3_2_4.xml
+.idea
+
+
+* .iml
+
